# HabitTracker

./: .coverage  README.md  file_fixture.json  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: admin.py  apps.py  models.py  permission.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_remove_habits_sign_pleasant_habit_and_more.py  0004_habits_last_performed_at.py  0005_alter_habits_periodicity.py  0006_alter_habits_is_pleasant_habit.py  0007_alter_habits_reward.py  0008_habits_owner.py  0009_remove_habits_user.py  0010_remove_habits_last_performed_at.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_tg_id.py  0003_alter_customuser_tg_id.py
