[tool.poetry]
name = "habittracker"
version = "0.1.0"
description = ""
authors = ["Nurlan-Grachyov <nurlan.grachyov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
djangorestframework = "^3.16.0"
black = "^25.1.0"
pyflakes = "3.3.2"
pycodestyle = "2.13.0"
mccabe = "==0.7.0"
poetry-core = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
